# sheila

./: .clang-format  .cmake-format.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: Findproxy.cmake
headers/: sheila.h
interface/: sheila.h  sheila.ixx
modules/: details.ixx  error.ixx  factory.ixx  fixture.ixx  generator.ixx  logger.ixx  manager.ixx  parameter.ixx  registration.ixx  sheila.ixx  test.ixx
modules/range/: algorithm.ixx  parameter.ixx  range.ixx  value.ixx
modules/test/: parameter_test.ixx  test.ixx  test_fixture.ixx
public/: global.h
sources/: factory.cpp  fixture.cpp  logger.cpp  manager.cpp  registration.cpp  sheila.cpp  test.cpp
test/: CMakeLists.txt  MockFixture.h  assertion.cpp  fixture.cpp  macro_test.cpp  macro_test_fixture.cpp  macro_test_parameter.cpp  macro_test_throw_exception.cpp  macro_test_throw_not_exception.cpp  macro_test_type.cpp  main.cpp  parameter.cpp  test.cpp  unit_test.cmake
