cmake_minimum_required(VERSION 3.28)

add_executable(sheila_normal_test EXCLUDE_FROM_ALL assertion.cpp)
target_compile_features(sheila_normal_test PUBLIC cxx_std_23)
target_link_libraries(sheila_normal_test PRIVATE sheila)
target_compile_definitions(sheila_normal_test PRIVATE SHEILA_TEST_BUILD)
set_target_properties(sheila_normal_test PROPERTIES FOLDER "test")
